tests/negative/test_fnc_func_asgn.orb
fnc foo () {};

fnc bar () {};

fnc main () () {
    = foo bar;
};